need to rewrite redisStream
