# docs/swagger.json
@@ -9,44 +9,6 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/entity": {
-            "post": {
-                "description": "Creates a new entity",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Entity"
-                ],
-                "summary": "Create a new entity",
-                "parameters": [
-                    {
-                        "description": "Entity data",
-                        "name": "entity",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.Person"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/model.Person"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {}
-                    }
-                }
-            }
-        },
         "/images/download/{imageName}": {
             "get": {
                 "description": "Downloads the specified image from the server",
@@ -134,13 +96,12 @@
                 "summary": "User login",
                 "parameters": [
                     {
-                        "description": "Login information",
-                        "name": "loginInfo",
+                        "description": "userRequest value (model.PersonRequest)",
+                        "name": "userRequest",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/model.UserRequest"
                         }
                     }
                 ],
@@ -148,8 +109,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/service.TokenPair"
                         }
                     },
                     "400": {
@@ -168,7 +128,19 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "Person"
+                ],
                 "summary": "Get all persons",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token for authentication",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -177,6 +149,49 @@
                             "items": {
                                 "$ref": "#/definitions/model.Person"
                             }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    }
+                }
+            },
+            "post": {
+                "description": "Creates a new person",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Person"
+                ],
+                "summary": "Create a new person",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token for authentication",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "personRequest value (model.PersonRequest)",
+                        "name": "personRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.PersonRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/model.Person"
                         }
                     },
                     "400": {
@@ -195,8 +210,18 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "Person"
+                ],
                 "summary": "Get a person by ID",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token for authentication",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "description": "Person ID",
@@ -226,8 +251,18 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "Person"
+                ],
                 "summary": "Update a person by ID",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token for authentication",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "description": "Person ID",
@@ -236,12 +271,12 @@
                         "required": true
                     },
                     {
-                        "description": "Updated person object",
-                        "name": "person",
+                        "description": "personRequest value (model.PersonRequest)",
+                        "name": "personRequest",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.Person"
+                            "$ref": "#/definitions/model.PersonRequest"
                         }
                     }
                 ],
@@ -266,8 +301,18 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "Person"
+                ],
                 "summary": "Delete a person by ID",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token for authentication",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "description": "Person ID",
@@ -314,10 +359,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Token pair",
+                        "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/service.TokenPair"
                         }
                     },
                     "400": {
@@ -327,7 +371,7 @@
                 }
             }
         },
-        "/signup": {
+        "/signUp": {
             "post": {
                 "description": "Sign up a new user",
                 "consumes": [
@@ -336,15 +380,18 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "User"
+                ],
                 "summary": "Sign up a new user",
                 "parameters": [
                     {
-                        "description": "User object",
-                        "name": "user",
+                        "description": "userRequest value (model.PersonRequest)",
+                        "name": "userRequest",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.User"
+                            "$ref": "#/definitions/model.UserRequest"
                         }
                     }
                 ],
@@ -389,31 +436,55 @@
                 }
             }
         },
-        "model.User": {
+        "model.PersonRequest": {
+            "type": "object",
+            "required": [
+                "profession",
+                "salary"
+            ],
+            "properties": {
+                "married": {
+                    "type": "boolean"
+                },
+                "profession": {
+                    "type": "string",
+                    "maxLength": 30,
+                    "minLength": 3
+                },
+                "salary": {
+                    "type": "integer",
+                    "maximum": 100000,
+                    "minimum": 100
+                }
+            }
+        },
+        "model.UserRequest": {
             "type": "object",
             "required": [
                 "password",
                 "username"
             ],
             "properties": {
-                "ID": {
-                    "type": "string"
-                },
                 "password": {
-                    "type": "array",
-                    "maxItems": 15,
-                    "minItems": 4,
-                    "items": {
-                        "type": "integer"
-                    }
-                },
-                "refreshToken": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 15,
+                    "minLength": 4
                 },
                 "username": {
                     "type": "string",
                     "maxLength": 15,
                     "minLength": 4
+                }
+            }
+        },
+        "service.TokenPair": {
+            "type": "object",
+            "properties": {
+                "accessToken": {
+                    "type": "string"
+                },
+                "refreshToken": {
+                    "type": "string"
                 }
             }
         }
